--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chess>=1.11.2",
     "fastapi[standard]>=0.119.1",
     "uvicorn[standard]>=0.38.0",
 ]
