--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "chess>=1.11.2",
     "fastapi[standard]>=0.119.1",
+    "ipykernel>=7.0.1",
+    "polars>=1.34.0",
+    "python-chess>=1.999",
     "uvicorn[standard]>=0.38.0",
 ]
