--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "ipykernel>=7.0.1",
     "polars>=1.34.0",
     "python-chess>=1.999",
+    "stockfish>=3.28.0",
     "uvicorn[standard]>=0.38.0",
 ]
