--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "chess>=1.11.2",
+    "dotenv>=0.9.9",
     "fastapi[standard]>=0.119.1",
     "ipykernel>=7.0.1",
     "polars>=1.34.0",
