--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,26 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.119.1",
     "ipykernel>=7.0.1",
+    "matplotlib>=3.10.7",
     "polars>=1.34.0",
+    "pyarrow>=21.0.0",
     "python-chess>=1.999",
+    "scikit-learn>=1.7.2",
     "stockfish>=3.28.0",
+    "torch>=2.9.0",
+    "tqdm>=4.67.1",
     "uvicorn[standard]>=0.38.0",
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cpu" },
+]
+torchvision = [
+  { index = "pytorch-cpu" },
 ]
