--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi[standard]>=0.119.1",
     "ipykernel>=7.0.1",
     "matplotlib>=3.10.7",
+    "pandas>=2.3.3",
     "polars>=1.34.0",
     "pyarrow>=21.0.0",
     "python-chess>=1.999",
@@ -18,6 +19,7 @@ dependencies = [
     "torch>=2.9.0",
     "tqdm>=4.67.1",
     "uvicorn[standard]>=0.38.0",
+    "xgboost>=3.1.1",
 ]
 
 [[tool.uv.index]]
